<resources>
    <string name="app_name">Jasara</string>
    <string name="sub_title">"تابع لذلك  تابع لذلك تابع لذلك تابع لذلك  تابع لذلك تابع لذلك تابع لذلك تابع لذلك  تابع لذلك تابع لذلك تابع لذلك تابع لذلك  تابع تابع لذلك تابع لذلك تابع لذلك تابع تابع تابع تابع تابع تابع تابع تابع تابع تابع "</string>

    <string name="title_waiting">قيد الانتظار</string>
    <string name="title_done">مكتملة</string>
    <string name="title_canceled">ملغاة</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_cart">السلة</string>
    <string name="title_more">المزيد</string>
    <string name="enter_mo">أدخل رقم الهاتف الخاص بك</string>
    <string name="enterMo">أدخل رقم هاتفك في الخانة لنتمكن من ارسال رمز التأكيد الخاص بك</string>
    <string name="moNum">رقم الهاتف</string>
    <string name="moValidate">تأكيد الرقم</string>
    <string name="dataEnter">أدخل بيانات التسجيل الخاصة بك</string>
    <string name="lastName">الاسم الأخير </string>
    <string name="firstName">الاسم الأول </string>
    <string name="quarterName">اسم الحي</string>
    <string name="cityName">المدينة</string>
    <string name="email">البريد الالكتروني</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="welcome">أهلا بك</string>
    <string name="login">تسجيل الدخول</string>
    <string name="mostOffers">العروض الأكثر طلبا</string>
    <string name="more">المزيد</string>
    <string name="mostProducts">المنتجات الأكثر طلباً</string>
    <string name="cart">سلة المشترياتً</string>
    <string name="itemsNum">عدد العناصرً</string>
    <string name="select">تحديد الكلً</string>
    <string name="shopping">متابعة التسوق</string>
    <string name="total">المجموع:</string>
    <string name="confirmOrder">تأكيد الطلبية</string>
    <string name="trackOrder">تتبع الطلبية السابقة </string>
    <string name="category">التصنيفات </string>
    <string name="addToCart">أضف الى السلة </string>
    <string name="simiProducts">منتجات مشابهة</string>
    <string name="quantity">الكمية المطلوبة</string>
    <string name="priceForKilo">السعر لكل كيلو</string>
    <string name="addNote">إضافة ملاحظة</string>
    <string name="favorite">المفضلة</string>
    <string name="location">الموقع</string>
    <string name="selectedLocation">الموقع المحدد</string>
    <string name="saveLocation">حفظ موقعك</string>
    <string name="editLocation">تعديل موقعك</string>
    <string name="profile">الملف الشخصي</string>
    <string name="account">الحساب</string>
    <string name="editProfile">تعديل الملف الشخصي</string>
    <string name="setting">الاعدادات</string>
    <string name="edit">تعديل</string>
    <string name="editPassword">تغيير كلمة المرور</string>
    <string name="orders">الطلبات</string>
    <string name="notification">الاشعارات</string>
    <string name="pNotification">اشعارات التطبيق</string>
    <string name="trackLocation">تتبع الموقع</string>
    <string name="Else">اخرى </string>
    <string name="lang">اللغة </string>
    <string name="payment">عملة الدفع </string>
    <string name="logout">تسجيل الخروج</string>
    <string name="shows">العروض</string>
    <string name="orderNow">اطلب الان</string>
    <string name="recommendation">التوصيات</string>
    <string name="yourLocation">المواقع الخاصة بك</string>
    <string name="editDeliverLoc">تعديل عنوان التوصيل</string>
    <string name="expireShows">عداد ساعات انتهاء العرض</string>
    <string name="sell">شراء</string>
    <string name="paymentMethod">خيارات الدفع</string>
    <string name="support">فريق الدعم</string>
</resources>