<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CartFragment">

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            >


            <ImageView
                android:id="@+id/show_back"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/showDetailsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/cart"
                android:textColor="#000"
                android:textSize="24dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/itemsNum"
                    android:textColor="@color/teal_700"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/itemsNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:layout_marginStart="5dp"
                    android:text="(4)"
                    android:textColor="@color/teal_700"
                    android:textSize="14dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_check_24"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/select"
                    android:textColor="@color/teal_700"
                    android:textSize="14dp"
                   />

            </LinearLayout>


            <ImageView
                android:id="@+id/deleteCartItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/delete"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:background="#707070"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvcart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:background="#707070"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="2.5"
                android:layout_height="wrap_content"
                 >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forword"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/shopping"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/purple_500"
                    android:textSize="13dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                 >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/total"
                    android:textColor="@color/purple_500"
                    android:textSize="16dp"
                     />

                <TextView
                    android:id="@+id/totalSell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="$21"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="2dp" />

            </LinearLayout>
        </LinearLayout>



        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/cairo"
            android:text="@string/confirmOrder"
            android:textSize="21dp"
            android:textColor="@color/white"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trackingOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/trackOrder"
                android:textColor="@color/purple_500"
                android:textSize="11dp" />

            <View
                android:layout_width="89dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="-4dp"
                android:background="@color/purple_500"

               />


        </LinearLayout>


    </LinearLayout>


</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>