<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activites.CheckNumberActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/mobile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/enter_mo"
                android:textColor="#212121"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enterMo"
                android:textColor="#AFAFAF"
                android:textSize="15dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="80dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px"
                android:clipToPadding="false"
                android:clipChildren="false"
                app:cardBackgroundColor="#F6F6F6"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardPreventCornerOverlap="false"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        app:ccp_textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextPhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/moNum"
                        android:textColorHint="#D05E27">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:padding="10dp"
                            android:background="@drawable/add_btn_style"
                            android:textColor="@color/purple_500" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/moValidate"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="سياسات الخصوصية والتراخيص"
                    android:textColor="#D05E27"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="أنت توافق على"
                    android:textColor="#AFAFAF"
                    android:textSize="15dp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>