<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/welcome"
                    android:textColor="#212121"
                    android:textSize="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="20dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_baseline_menu_24" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_notifications_active_24" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginStart="-10dp"
                        android:layout_marginLeft="-10dp"
                        app:cardBackgroundColor="#D90E0E"
                        app:cardCornerRadius="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3"
                                android:textColor="#fff"
                                android:textSize="7dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="10dp"
                app:sliderAnimationDuration="200"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="false"
                app:sliderIndicatorAnimationDuration="200"
                app:sliderIndicatorGravity="center|bottom"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                android:visibility="gone"
                app:sliderIndicatorRadius="1dp"
                app:sliderIndicatorSelectedColor="@color/teal_700"
                app:sliderIndicatorUnselectedColor="#E4E4E4"
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true" />

                 <Button
                     android:id="@+id/slider_login"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:backgroundTint="@color/gray"
                     android:layout_marginStart="80dp"
                     android:layout_marginTop="80dp"
                     android:layout_marginEnd="80dp"
                     android:text="@string/login"
                     android:fontFamily="@font/cairo"
                     android:textSize="16dp"
                     />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/search_outline"
                android:drawableStart="@drawable/ic_baseline_filter_list_24"
                android:drawableEnd="@drawable/ic_baseline_search_24"
                android:ems="10"
                android:imeOptions="actionSearch"
                android:drawableTint="#707070"
                android:inputType="text"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="#999"
                android:drawableLeft="@drawable/ic_baseline_filter_list_24"
                android:drawableRight="@drawable/ic_baseline_search_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                 >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/mostOffers"
                    android:textColor="#000"
                    android:textSize="14dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cairo_bold"
                        android:text="@string/more"
                        android:textColor="@color/purple_500"
                        android:textSize="12dp" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-4dp"
                        android:background="@color/purple_500" />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDiscountMostRequested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/offers_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/gray"
                android:layout_marginStart="90dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="90dp"
                android:text="@string/login"
                android:fontFamily="@font/cairo"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/mostProducts"
                android:textColor="#000"
                android:textSize="14dp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductsMostRequested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />



        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addToCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/purple_500"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@color/white"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginRight="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>